# pushpress-cli

./: LICENSE  README.md  pyproject.toml
docs/: API.md
pp/: cli.py  config.py  describe.py  errors.py  http.py  models.py  output.py  session.py
pp/api/: appointments.py  attendance.py  auth.py  benchmarks.py  client.py  events.py  graphql.py  preorders.py  profile.py  raw.py  schedule.py  scores.py  social.py  workouts.py
tests/: test_api_appointments.py  test_api_attendance.py  test_api_auth.py  test_api_benchmarks.py  test_api_client.py  test_api_events.py  test_api_passthrough.py  test_api_preorders.py  test_api_profile.py  test_api_schedule.py  test_api_scores.py  test_api_social.py  test_api_workouts.py  test_cli_appointments.py  test_cli_attendance.py  test_cli_auth.py  test_cli_benchmarks.py  test_cli_client.py  test_cli_events.py  test_cli_graphql.py  test_cli_preorders.py  test_cli_profile.py  test_cli_raw.py  test_cli_schedule.py  test_cli_scores.py  test_cli_workouts.py  test_describe.py  test_errors.py  test_http.py  test_output.py  test_session.py  test_smoke.py
